<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black">
                <requestFocus/>
            </EditText>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locality"
                android:inputType="text"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/ps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ps"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/dist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dist"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"
            android:text="Save"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>