<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/movies">

    </ImageView>

    <LinearLayout
        android:id="@+id/firstLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="monospace">

        </TextView>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="monospace">

        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstLinear"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:text="@string/forgot_password">
    </TextView>
    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
       android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/notice_user">
    </TextView>
</RelativeLayout>